--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "SeeDocsAt": "https://fs-online.github.io/Formula-Student-Driverless-Simulator/",
+  "SeeDocsAt": "https://FS-Driverless.github.io/Formula-Student-Driverless-Simulator/",
   "SettingsVersion": 1.2,
   "ViewMode": "SpringArmChase",
   "ClockSpeed": 1.0,
