Move some ubuntu docs around

--- a/UE4Project/Config/DefaultGame.ini
+++ b/UE4Project/Config/DefaultGame.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=367FFC384956CDC4377673B3217F380D
 ProjectName="FSOnline"
-CompanyName=FS-Driverless
+CompanyName=Formula Student Driverless Community
 Homepage="https://github.com/FS-Driverless/Formula-Student-Driverless-Simulator"
 SupportContact="https://github.com/FS-Driverless/Formula-Student-Driverless-Simulator/issues"
 LicensingTerms=GPL V2
