Camera python client docs

--- a/settings.json
+++ b/settings.json
@@ -59,14 +59,14 @@
         }
       },
       "Cameras": {
-        "cam1": {
+        "examplecam": {
           "CaptureSettings": [
-            {
+          {
               "ImageType": 0,
               "Width": 785,
               "Height": 785,
               "FOV_Degrees": 90
-            }
+          }
           ],
           "X": 1.0,
           "Y": 0.06,
@@ -74,7 +74,7 @@
           "Pitch": 0.0,
           "Roll": 0.0,
           "Yaw": 0
-        },
+      },
         "cam2": {
           "CaptureSettings": [
             {
