--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,8 @@ nav:
   - "Introduction":
     - "System overview": "system-overview.md"
     - "Getting started": "getting-started.md"
+    - "Getting started with ROS": "getting-started-with-ros.md"
+    - "Getting started with Python": "getting-started-with-python.md"
   - "Vehicle & Sensors":
     - "Vehicle model": "vehicle_model.md"
     - "IMU": "imu.md"
