Small fixes to get linux export working

--- a/UE4Project/Config/DefaultGame.ini
+++ b/UE4Project/Config/DefaultGame.ini
@@ -14,7 +14,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 StagingDirectory=(Path="C:/Users/developer/Desktop/beta-4g")
-FullRebuild=True
+FullRebuild=False
 ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
