--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ros/src/fs_msgs"]
 	path = ros/src/fs_msgs
 	url = https://github.com/FS-Driverless/fs_msgs.git
+[submodule "AirSim/AirLib/external/rpclib"]
+	path = AirSim/external/rpclib
+	url = https://github.com/rpclib/rpclib.git
