include ros2/src/fs_msgs as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "ros/src/fs_msgs"]
 	path = ros/src/fs_msgs
 	url = https://github.com/FS-Driverless/fs_msgs.git
+[submodule "ros2/src/fs_msgs"]
+	path = ros2/src/fs_msgs
+	url = https://github.com/FS-Driverless/fs_msgs.git
+	branch = ros2
