Docs version changes

--- a/UE4Project/Config/DefaultGame.ini
+++ b/UE4Project/Config/DefaultGame.ini
@@ -8,6 +8,7 @@ LicensingTerms=GPL V2
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "8F8B6B2A472F9FDFB69E2B8CFAE8C4E0", "Formula Student Driverless Simulator")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "F31D7C524A9E9BC66DD2AA922D309408", "Formula Student Driverless Simulator (debug)")
 CopyrightNotice=This program is free software; you can redistribute it and/ormodify it under the terms of the GNU General Public License as published by the Free Software Foundation
+ProjectVersion=2.2.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
