--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,17 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build_ros:
+    name: Build ROS1 workspace
+    strategy:
+      matrix:
+        os: [ubuntu-18.04]
+        include:
+          - os: ubuntu-18.04
+            distro: melodic
     # The type of runner that the job will run on
-    runs-on: ubuntu-18.04
-
+    runs-on: ${{ matrix.os }}
+    container:
+      image:  osrf/ros:${{ matrix.distro }}-desktop
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -22,19 +30,11 @@ jobs:
       with:
         submodules: recursive
     
-    # Runs a set of commands using the runners shell
-    - name: Setup ROS
-      uses: betwo/github-setup-catkin@v1.3.0
-      with:
-        # Version range or exact version of ROS version to use, using SemVer's version range syntax.
-        ros-version: 'melodic'
-        build-tool: 'catkin_tools'
-        # Root directory of the catkin workspace
-        workspace: ./ros
-      
     - name: Compilation settings
       run: |
-        sudo apt-get -y install gcc-8 g++-8 rsync libyaml-cpp-dev libcurl4-openssl-dev
+        sudo apt-get update -y
+        sudo apt-get -y install gcc-8 g++-8 rsync libyaml-cpp-dev libcurl4-openssl-dev lsb-release wget software-properties-common gnupg 
+        sudo apt-get -y install python3-catkin-tools ros-${{ matrix.distro }}-joy ros-${{ matrix.distro }}-tf2-geometry-msgs
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 700 --slave /usr/bin/g++ g++ /usr/bin/g++-7
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 800 --slave /usr/bin/g++ g++ /usr/bin/g++-8
       
@@ -46,13 +46,16 @@ jobs:
        
     - name: Build catkin ws
       run: |
+        source /opt/ros/${{ matrix.distro }}/setup.bash
         set -ex o pipefail
         catkin build 
       working-directory: ./ros 
+      shell: bash
       env:
-       ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
   
   build_ros2:
+    name: Build ROS2 workspace
     strategy:
       matrix:
         compiler: [ g++, clang++ ]
@@ -70,6 +73,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+      
       - name: Compilation Settings
         run: |
           apt-get update -y
@@ -85,6 +89,7 @@ jobs:
         working-directory: AirSim
       - name: Build ros2 workspace
         shell: bash
+        run: |
           source /opt/ros/${{ matrix.distro }}/setup.bash
           colcon build --cmake-args -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}
         working-directory: ros2
