--- a/AirSim/docker_build/Dockerfile
+++ b/AirSim/docker_build/Dockerfile
@@ -3,6 +3,7 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y \
+    sudo \
     git \
     build-essential \
     cmake \
